src/test/deca/context/invalid/expr_cast_null_to_int.deca
// Test de la règle (3.39) : on ne peut pas cast de null vers int.
{
	int var1;
	null var2;
	var1 = (int)(var2);
}

// Résultat :
//# a
